Refine CppUsage/CMakeLists.txt for gcc/c++ stardand libraries.

--- a/CppUsage/CMakeLists.txt
+++ b/CppUsage/CMakeLists.txt
@@ -11,16 +11,26 @@ target_compile_features(
 	cxx_std_23
 )
 if (${COMPILER_SUITE} STREQUAL "gcc")
-	target_link_options(
-		cppusage
-		PRIVATE
-		-static-libgcc  # GCC support for code generation of integer/floating-point arithmetics, etc
-		-static-libstdc++
-	)
+  	target_link_options(
+  		cppusage
+  		PRIVATE
+		# The following two libraries are only supported ones with -static-* link options.
+		# It's also OK to do it with absolute libraries in target_link_libraries
+		# GCC support for code generation of integer/floating-point arithmetics, etc
+  		-static-libgcc
+  		-static-libstdc++
+  	)
 	target_link_libraries(
 		cppusage
-		gcc_eh  # Gcc support for code generation of C++ error handling, RTTI, etc
-		stdc++fs  # No shared version, so maybe ok to omitted
+		# The following could be done with target_link_options::-static-libgcc
+		#/usr/local/gcc-${MY_GCC_VERSION}/lib/gcc/x86_64-pc-linux-gnu/${MY_GCC_VERSION}/libgcc.a
+		# The following could be done with target_link_options::-static-libstdc++
+		#/usr/local/gcc-${MY_GCC_VERSION}/lib64/libstdc++.a
+
+		# Gcc support for code generation of C++ error handling, RTTI, etc
+		/usr/local/gcc-${MY_GCC_VERSION}/lib/gcc/x86_64-pc-linux-gnu/${MY_GCC_VERSION}/libgcc_eh.a
+		# No shared version, so maybe ok to omitted
+		/usr/local/gcc-${MY_GCC_VERSION}/lib64/libstdc++fs.a
 	)
 endif()
 target_link_libraries(
