--- a/build_gcc_13.1.0/build
+++ b/build_gcc_13.1.0/build
@@ -8,7 +8,8 @@ function usage() {
 function build_main() {
 	local vBuildTarget=""
 	local vCleanFirst=false
-	local vBuildCmd="cmake --build ."
+	local vBuildPath=$(dirname $(realpath $0))
+	local vBuildCmd="cmake --build ${vBuildPath}"
 
 	for((i = 1; i <= $#; ++i)); do
 		case ${!i} in
